# plasma-widget-ponycountdownplasma

./: .gitignore  CMakeLists.txt  Messages.sh  README  filedownloader.cpp  filedownloader.h  plasma-applet-ponycountdownplasma.desktop  plasma_applet_ponycountdownplasma.desktop  plasma_widget_ponycountdownplasma.notifyrc  ponycountdownplasma.cpp  ponycountdownplasma.h  ponycountdownplasma.kdev4  qdbusnotification.cpp  qdbusnotification.h  qtimespan.cpp  qtimespan.h
